2017-04-07  Vladimir Makarov  <vmakarov@redhat.com>

PR rtl-optimization/70703
	* ira-color.c (update_conflict_hard_regno_costs): Use
	int64_t instead of HOST_WIDE_INT.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@246765 138bc75d-0d04-0410-961f-82ee72b054a4